Adding hard path to travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,13 @@ matrix:
     - julia: nightly
 notifications:
   email: false
+env:
+  - LD_LIBRARY_PATH=/home/travis/.julia/v0.6/Conda/deps/usr/lib
+matrix:
+  exclude:
+  - os: osx 
+    env: LD_LIBRARY_PATH=/home/travis/.julia/v0.6/Conda/deps/usr/lib
+
 # uncomment the following lines to override the default test script
 #script:
 #  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
