--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ notifications:
 # uncomment the following lines to override the default test script
 script:
  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
- - LD_LIBRARY_PATH="/home/travis/.julia/v0.6/Conda/deps/usr/lib/" julia -e 'Pkg.clone(pwd()); Pkg.build("GDAL"); Pkg.test("GDAL"; coverage=true)'
+ - julia -e 'Pkg.clone(pwd()); Pkg.build("GDAL")'
+ - LD_LIBRARY_PATH="/home/travis/.julia/v0.6/Conda/deps/usr/lib/" julia -e 'Pkg.build("GDAL"); Pkg.test("GDAL"; coverage=true)'
